admin and more fixed

--- a/style.css
+++ b/style.css
@@ -100,3 +100,13 @@ body
     opacity: 0.6;
     cursor: not-allowed;
 }
+.rent
+{
+    color: rgb(180, 18, 18);
+    text-align: center;
+}
+.rentReturned
+{
+    color: rgb(63, 128, 10);
+    text-align: center;
+}
